--- a/igcar/src/components/Footer.css
+++ b/igcar/src/components/Footer.css
@@ -1,14 +1,6 @@
-/* src/components/Footer.css */
-.footer {
-    background-color: #1976d2;
-    padding: 10px 0;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-  }
-  
-  .footer p {
-    margin: 0;
-    color: white;
-  }
-  
+:root {
+  --bulma-primary-h: 210deg;
+  --bulma-primary-s: 79%;
+  --bulma-primary-l: 46%;
+}
+
